css/styles.css
h1{
  text-align: center;
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: aquamarine;
  color: aliceblue;
}

.profilepic {
  display: block;
  margin-left: auto;
  margin-right: auto;
  border-radius: 40%;
  height: 25%;
  width: 25%;
}

body{
  background: url('../img/bgimage.jpg');
  background-color: rgb(231, 120, 120);
  background-attachment: fixed;
}
.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}
.columnmain {
  width: 250px;
  float: left;
  margin: 12px;
  border: 2px solid blue;
  padding: 4px;
  background-color: lightblue;
  box-sizing: border-box;
  text-align: center;
}

